samples/_failures_safe/1761317943_7ebe63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a1afe8b.c: In function ‘main’:
./samples/SAFE/__tmp_8a1afe8b.c:140:24: error: missing terminating " character
  140 |                 printf("Error: Matrix dimensions incompatible
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8a1afe8b.c:140:17: error: expected expression at end of input
  140 |                 printf("Error: Matrix dimensions incompatible
      |                 ^~~~~~
./samples/SAFE/__tmp_8a1afe8b.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a1afe8b.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a1afe8b.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a1afe8b.c:140:17: error: expected declaration or statement at end of input
